feat(): extraer string

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="abrir_camara_no_deprecated">abrir camara no deprecated</string>
     <string name="activity_2">ACTIVITY 2</string>
     <string name="volver">Volver</string>
+    <string name="mensaje">mensaje</string>
 </resources>
